[package]
name = "stele_undead"
version = "0.1.0"
description = "Undead Stele Bar Configuration"
authors = ["Christian Duerr <contact@christianduerr.com>"]
license = "GPL-3.0-only"
rust-version = "1.94.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
stele = { git = "https://github.com/chrisduerr/stele" }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
